# home-work

./: .env  README.md
.github/workflows/: deploy_lambda.yml
api/: Cargo.toml
api-example/: Cargo.toml
api-example/src/: main.rs
api/src/: controller.rs  main.rs
api/src/controller/: health_check_controller.rs  homework_controller.rs
infrastructure/src/: repository.rs
infrastructure/src/repository/: homework_repository.rs
migrations/: 20230826221152_init.sql  20230827085827_add-autoincrement.sql
proxy/wild-moon-a6a9/: package-lock.json  package.json  wrangler.toml
util/: Cargo.toml
util/src/: lib.rs
