[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "tls-rustls"] }
chrono = "0.4.26"
serde = { version = "^1.0.101", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
serde_json = "^1.0.41"
